donkere modus werkt weer en php is ge format

--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
             <a href="#settings">Instellingen</a>
         </nav>
     </header>
-
+<script src="js/script.js"></script>
     <section id="settings"><button onclick="toggleDarkMode()">Donkere modus</button> </section>
 
    <!-- Dashboard -->
